Added auth pages (Static)

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,14 +16,14 @@
 
 	<title>AdminKit Demo - Bootstrap 5 Admin Template</title>
 
-	<link href="css/app.css" rel="stylesheet">
+	<link href="/css/app.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
 	{{{body}}}
 
-	<script src="js/app.js"></script>
+	<script src="/js/app.js"></script>
 
 	<script>
 		document.addEventListener("DOMContentLoaded", function() {
