app improvements and register logic almost done

--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -1,4 +1,5 @@
 <body>
+
 	<main class="d-flex w-100">
 		<div class="container d-flex flex-column">
 			<div class="row vh-100">
@@ -10,31 +11,44 @@
 							<p class="lead">
 								Start creating the best possible user experience for you customers.
 							</p>
+							{{#if hasError}}
+							<div class="alert alert-danger" role="alert">
+								{{errorMessage}}
+							</div>
+							{{/if}}
 						</div>
 
 						<div class="card">
 							<div class="card-body">
 								<div class="m-sm-4">
-									<form>
+									<form action="/auth/register" method="POST">
 										<div class="mb-3">
 											<label class="form-label">Name</label>
-											<input class="form-control form-control-lg" type="text" name="name" placeholder="Enter your name" />
+											<input class="form-control form-control-lg" type="text" name="name"
+												placeholder="Enter your name" />
 										</div>
 										<div class="mb-3">
 											<label class="form-label">Company</label>
-											<input class="form-control form-control-lg" type="text" name="company" placeholder="Enter your company name" />
+											<input class="form-control form-control-lg" type="text" name="company"
+												placeholder="Enter your company name" />
 										</div>
 										<div class="mb-3">
 											<label class="form-label">Email</label>
-											<input class="form-control form-control-lg" type="email" name="email" placeholder="Enter your email" />
+											<input class="form-control form-control-lg" type="email" name="email"
+												placeholder="Enter your email" />
 										</div>
 										<div class="mb-3">
 											<label class="form-label">Password</label>
-											<input class="form-control form-control-lg" type="password" name="password" placeholder="Enter password" />
+											<input class="form-control form-control-lg" type="password" name="password"
+												placeholder="Enter password" />
+										</div>
+										<div class="mb-3">
+											<label class="form-label">Password</label>
+											<input class="form-control form-control-lg" type="password"
+												name="repeatPassword" placeholder="Re-Enter password" />
 										</div>
 										<div class="text-center mt-3">
-											<a href="index.html" class="btn btn-lg btn-primary">Sign up</a>
-											<!-- <button type="submit" class="btn btn-lg btn-primary">Sign up</button> -->
+											<button type="submit" class="btn btn-lg btn-primary">Sign up</button>
 										</div>
 									</form>
 								</div>
