--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,4 +1,9 @@
 <main class="d-flex w-100">
+	{{#if hasError}}
+	<div class="alert alert-danger" role="alert">
+		{{errorMessage}}
+	</div>
+	{{/if}}
 	<div class="container d-flex flex-column">
 		<div class="row vh-100">
 			<div class="col-sm-10 col-md-8 col-lg-6 mx-auto d-table h-100">
