Site list & site partial created

--- a/views/partials/topbar.hbs
+++ b/views/partials/topbar.hbs
@@ -150,7 +150,7 @@
 
 						<a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
 							<img src="img/avatars/avatar.jpg" class="avatar img-fluid rounded me-1"
-								alt="Charles Hall" /> <span class="text-dark">Charles Hall</span>
+								alt="{{user.name}}" /> <span class="text-dark">{{user.name}}</span>
 						</a>
 						<div class="dropdown-menu dropdown-menu-end">
 							<a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1"
