Site logic development - Part I

--- a/views/partials/topbar.hbs
+++ b/views/partials/topbar.hbs
@@ -113,7 +113,7 @@
 								<a href="#" class="list-group-item">
 									<div class="row g-0 align-items-center">
 										<div class="col-2">
-											<img src="img/avatars/avatar-4.jpg" class="avatar img-fluid rounded-circle"
+											<img src="/img/avatars/avatar-4.jpg" class="avatar img-fluid rounded-circle"
 												alt="Christina Mason">
 										</div>
 										<div class="col-10 ps-2">
@@ -149,7 +149,7 @@
 						</a>
 
 						<a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
-							<img src="img/avatars/avatar.jpg" class="avatar img-fluid rounded me-1"
+							<img src="/img/avatars/avatar.jpg" class="avatar img-fluid rounded me-1"
 								alt="{{user.name}}" /> <span class="text-dark">{{user.name}}</span>
 						</a>
 						<div class="dropdown-menu dropdown-menu-end">
