Site Services Update

--- a/views/partials/siteCard.hbs
+++ b/views/partials/siteCard.hbs
@@ -1,9 +1,10 @@
 								<div class="card">
 									<div class="card-header">
-										<h5 class="card-title mb-0">{{site.name}}</h5>
+										<h5 class="card-title mb-0">{{site_name}}</h5>
 									</div>
 									<div class="card-body">
-										<p class="card-text">{{site.description}}</p>
+										<p class="card-text">Company owner: {{company_name}}</p>
 										<a href="/sites/{{_id}}" class="btn btn-primary">View analytics</a>
+										
 									</div>
 								</div>
