--- a/views/sites/index.hbs
+++ b/views/sites/index.hbs
@@ -22,7 +22,7 @@
 								<h5 class="card-title mb-0">Site List</h5>
 							</div>
 							<div class="card-body">
-								{{#each site}}
+								{{#each siteData}}
 								{{>siteCard}}
 
 								{{else}}
