Site Services Improvements

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -10,8 +10,8 @@
 				</li>
 
 				<li class="sidebar-item">
-					<a class="sidebar-link" href="index.html">
-						<i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Dashboard</span>
+					<a class="sidebar-link" href="/">
+						<i class="align-middle" data-feather="sliders"></i> <span class="align-middle">My Sites</span>
 					</a>
 				</li>
 
