--- a/views/partials/siteCard.hbs
+++ b/views/partials/siteCard.hbs
@@ -4,7 +4,7 @@
 									</div>
 									<div class="card-body">
 										<p class="card-text">Company owner: {{company_name}}</p>
-										<a href="/sites/{{_id}}" class="btn btn-primary">View analytics</a>
-										
+										<a href="/sites/{{_id}}/manage" class="btn btn-primary">View analytics</a>
+
 									</div>
 								</div>
