User Controller - Part I

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -16,7 +16,7 @@
 				</li>
 
 				<li class="sidebar-item">
-					<a class="sidebar-link" href="pages-profile.html">
+					<a class="sidebar-link" href="/users/{{user._id}}">
 						<i class="align-middle" data-feather="user"></i> <span class="align-middle">Profile</span>
 					</a>
 				</li>
