--- a/views/profiles/index.hbs
+++ b/views/profiles/index.hbs
@@ -21,7 +21,7 @@
                                     <h5 class="card-title mb-0">Profile Details</h5>
                                 </div>
                                 <div class="card-body text-center">
-                                    <img src="/img/avatars/avatar-4.jpg" alt="Christina Mason"
+                                    <img src="{{userImage}}" alt="Christina Mason"
                                         class="img-fluid rounded-circle mb-2" width="128" height="128" />
                                     <h5 class="card-title mb-0">Christina Mason</h5>
                                     <div class="text-muted mb-2">Lead Developer</div>
@@ -71,8 +71,12 @@
                                 </div>
                             </div>
                         </div>
-
                         <div class="col-md-8 col-xl-9">
+                            <p>Add your content here ...</p>
+                        </div>
+                        {{!--
+                        !!!!!!!!!!!!!! IF YOU WANT YOU CAN EDIT THIS BY YOUR TASTE, BUT IM GOING TO LEAVE THIS BLANK !!!!!!!!!!!!!!
+                         <div class="col-md-8 col-xl-9">
                             <div class="card">
                                 <div class="card-header">
 
@@ -208,7 +212,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> --}}
                     </div>
 
                 </div>
