--- a/views/index.hbs
+++ b/views/index.hbs
@@ -89,19 +89,19 @@
 										<div class="card-body">
 											<div class="row">
 												<div class="col mt-0">
-													<h5 class="card-title">Demo Property</h5>
+													<h5 class="card-title">Site Visits</h5>
 												</div>
 
 												<div class="col-auto">
 													<div class="stat text-primary">
-														<i class="align-middle" data-feather="shopping-cart"></i>
+														<i class="align-middle" data-feather="users"></i>
 													</div>
 												</div>
 											</div>
-											<h1 class="mt-1 mb-3">Demo Value</h1>
+											<h1 class="mt-1 mb-3">14.212</h1>
 											<div class="mb-0">
-												<span class="text-danger"> <i class="mdi mdi-arrow-bottom-right"></i>
-													-2.25% </span>
+												<span class="text-success"> <i class="mdi mdi-arrow-bottom-right"></i>
+													5.25% </span>
 												<span class="text-muted">Since last week</span>
 											</div>
 										</div>
