--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -25,6 +25,7 @@
 	{{{body}}}
 
 	<script src="/js/app.js"></script>
+	<script src="/js/vanalytics.js"></script>
 
 	<script>
 		document.addEventListener("DOMContentLoaded", function() {
