--- a/views/profiles/index.hbs
+++ b/views/profiles/index.hbs
@@ -10,9 +10,6 @@
 
                     <div class="mb-3">
                         <h1 class="h3 d-inline align-middle">Profile</h1>
-                        <a class="badge bg-dark text-white ms-2" href="upgrade-to-pro.html">
-                            Get more page examples
-                        </a>
                     </div>
                     <div class="row">
                         <div class="col-md-4 col-xl-3">
@@ -21,10 +18,14 @@
                                     <h5 class="card-title mb-0">Profile Details</h5>
                                 </div>
                                 <div class="card-body text-center">
-                                    <img src="{{userImage}}" alt="Christina Mason"
+                                    <img src="{{userImage}}" alt="{{userDetails.name}}"
                                         class="img-fluid rounded-circle mb-2" width="128" height="128" />
-                                    <h5 class="card-title mb-0">Christina Mason</h5>
-                                    <div class="text-muted mb-2">Lead Developer</div>
+                                    <h5 class="card-title mb-0">{{userDetails.name}}</h5>
+                                    <div class="text-muted mb-2">{{userDetails.company}}</div>
+                                    {{#if (eq user._id userDetails._id)}}
+                                    <!-- Content to render when the user is the owner of the account -->
+                                        <a class="btn btn-secondary btn-sm" href="#">Edit</a>
+                                    {{/if}}
 
                                     <div>
                                         <a class="btn btn-primary btn-sm" href="#">Follow</a>
@@ -33,7 +34,9 @@
                                     </div>
                                 </div>
                                 <hr class="my-0" />
-                                <div class="card-body">
+                                {{!--
+                                EDIT THIS BY YOUR NEEDS, BUT IM GOING TO LEAVE THIS BLANK !
+                                 <div class="card-body">
                                     <h5 class="h6 card-title">Skills</h5>
                                     <a href="#" class="badge bg-primary me-1 my-1">HTML</a>
                                     <a href="#" class="badge bg-primary me-1 my-1">JavaScript</a>
@@ -44,7 +47,7 @@
                                     <a href="#" class="badge bg-primary me-1 my-1">Redux</a>
                                     <a href="#" class="badge bg-primary me-1 my-1">UI</a>
                                     <a href="#" class="badge bg-primary me-1 my-1">UX</a>
-                                </div>
+                                </div> --}}
                                 <hr class="my-0" />
                                 <div class="card-body">
                                     <h5 class="h6 card-title">About</h5>
@@ -59,7 +62,7 @@
                                     </ul>
                                 </div>
                                 <hr class="my-0" />
-                                <div class="card-body">
+                                {{!-- <div class="card-body">
                                     <h5 class="h6 card-title">Elsewhere</h5>
                                     <ul class="list-unstyled mb-0">
                                         <li class="mb-1"><a href="#">staciehall.co</a></li>
@@ -68,7 +71,7 @@
                                         <li class="mb-1"><a href="#">Instagram</a></li>
                                         <li class="mb-1"><a href="#">LinkedIn</a></li>
                                     </ul>
-                                </div>
+                                </div> --}}
                             </div>
                         </div>
                         <div class="col-md-8 col-xl-9">
