--- a/views/index.hbs
+++ b/views/index.hbs
@@ -54,7 +54,7 @@
 													</div>
 												</div>
 											</div>
-											<h1 class="mt-1 mb-3">14.212</h1>
+											<h1 class="mt-1 mb-3">{{siteData.visitors}}</h1>
 											<div class="mb-0">
 												<span class="text-success"> <i class="mdi mdi-arrow-bottom-right"></i>
 													5.25% </span>
@@ -98,7 +98,7 @@
 													</div>
 												</div>
 											</div>
-											<h1 class="mt-1 mb-3">14.212</h1>
+											<h1 class="mt-1 mb-3">{{siteData.visits}}</h1>
 											<div class="mb-0">
 												<span class="text-success"> <i class="mdi mdi-arrow-bottom-right"></i>
 													5.25% </span>
