--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,6 +11,51 @@
 		</nav>
 
 		<main class="content">
+			{{#if (eq siteData.visitors 1)}}
+  <!-- Content to render when the user is the owner of the account -->
+  <div class="alert alert-warning" role="alert">
+    Please add the following script in all your pages in order to start receiving analytics!
+
+    <pre>
+document.addEventListener('DOMContentLoaded',(event) => {
+    // API endpoint URL
+	const siteKey =  '653eb1228928b21c32b94726' //YOUR_SITE_KEY_HERE; // example '653eb1228928b21c32b94726'
+
+    
+    const apiUrl = `http://localhost:3000/analytics/sites/${siteKey}`;
+
+    // Data to send to the API
+    const data = {
+        visitorData: event,
+        siteData: window.location
+    };
+
+    // Options for the fetch request
+    const options = {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+        },
+        body: JSON.stringify(data),
+    };
+
+    // Make the API request
+    fetch(apiUrl, options)
+        .then(response => {
+            if (response.ok) {
+                console.log('API request succeeded');
+            } else {
+                console.error('API request failed');
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+        });
+});
+    </pre>
+  </div>
+{{/if}}
+
 			<div class="container-fluid p-0">
 
 				<h1 class="h3 mb-3"><strong>Analytics</strong> Dashboard</h1>
