--- a/views/index.hbs
+++ b/views/index.hbs
@@ -239,7 +239,7 @@ document.addEventListener('DOMContentLoaded',(event) => {
 						<div class="card flex-fill">
 							<div class="card-header">
 
-								<h5 class="card-title mb-0">Latest Projects</h5>
+								<h5 class="card-title mb-0">Latest Visitors</h5>
 							</div>
 							<table class="table table-hover my-0">
 								<thead>
