Bug fixes & templating improvements

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,7 +19,7 @@
     <pre>
 document.addEventListener('DOMContentLoaded',(event) => {
     // API endpoint URL
-	const siteKey =  '653eb1228928b21c32b94726' //YOUR_SITE_KEY_HERE; // example '653eb1228928b21c32b94726'
+	const siteKey = '{{siteData._id}}'
 
     
     const apiUrl = `http://localhost:3000/analytics/sites/${siteKey}`;
