--- a/views/partials/topbar.hbs
+++ b/views/partials/topbar.hbs
@@ -125,9 +125,8 @@
 			<a class="nav-icon dropdown-toggle d-inline-block d-sm-none" href="#" data-bs-toggle="dropdown">
 				<i class="align-middle" data-feather="settings"></i>
 			</a>
-
 			<a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
-				<img src="/img/avatars/avatar.jpg" class="avatar img-fluid rounded me-1" alt="{{user.name}}" /> <span
+				<img src="{{userImage}}" class="avatar img-fluid rounded me-1" alt="{{user.name}}" /> <span
 					class="text-dark">{{user.name}}</span>
 			</a>
 			<div class="dropdown-menu dropdown-menu-end">
