Logging system & advanced analytics

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -239,75 +239,32 @@ document.addEventListener('DOMContentLoaded',(event) => {
 						<div class="card flex-fill">
 							<div class="card-header">
 
-								<h5 class="card-title mb-0">Latest Visitors</h5>
+								<h5 class="card-title mb-0">Latest Visitors ( Geo Location )</h5>
 							</div>
 							<table class="table table-hover my-0">
 								<thead>
 									<tr>
-										<th>Name</th>
-										<th class="d-none d-xl-table-cell">Start Date</th>
-										<th class="d-none d-xl-table-cell">End Date</th>
-										<th>Status</th>
-										<th class="d-none d-md-table-cell">Assignee</th>
+										<th>Country</th>
+										<th class="d-none d-xl-table-cell">Country Code</th>
+										<th class="d-none d-xl-table-cell">Region</th>
+										<th>Region Name</th>
+										<th class="d-none d-md-table-cell">City</th>
+										<th class="d-none d-md-table-cell">ZIP</th>
+										<th class="d-none d-md-table-cell">LAT</th>
+										<th class="d-none d-md-table-cell">LON</th>
+										<th class="d-none d-md-table-cell">Timezone</th>
+										<th class="d-none d-md-table-cell">ISP</th>
+										<th class="d-none d-md-table-cell">Organization</th>
+										<th class="d-none d-md-table-cell">AS</th>
+										<th class="d-none d-md-table-cell">IP ADDRESS</th>
+
 									</tr>
 								</thead>
 								<tbody>
-									<tr>
-										<td>Project Apollo</td>
-										<td class="d-none d-xl-table-cell">01/01/2021</td>
-										<td class="d-none d-xl-table-cell">31/06/2021</td>
-										<td><span class="badge bg-success">Done</span></td>
-										<td class="d-none d-md-table-cell">Vanessa Tucker</td>
-									</tr>
-									<tr>
-										<td>Project Fireball</td>
-										<td class="d-none d-xl-table-cell">01/01/2021</td>
-										<td class="d-none d-xl-table-cell">31/06/2021</td>
-										<td><span class="badge bg-danger">Cancelled</span></td>
-										<td class="d-none d-md-table-cell">William Harris</td>
-									</tr>
-									<tr>
-										<td>Project Hades</td>
-										<td class="d-none d-xl-table-cell">01/01/2021</td>
-										<td class="d-none d-xl-table-cell">31/06/2021</td>
-										<td><span class="badge bg-success">Done</span></td>
-										<td class="d-none d-md-table-cell">Sharon Lessman</td>
-									</tr>
-									<tr>
-										<td>Project Nitro</td>
-										<td class="d-none d-xl-table-cell">01/01/2021</td>
-										<td class="d-none d-xl-table-cell">31/06/2021</td>
-										<td><span class="badge bg-warning">In progress</span></td>
-										<td class="d-none d-md-table-cell">Vanessa Tucker</td>
-									</tr>
-									<tr>
-										<td>Project Phoenix</td>
-										<td class="d-none d-xl-table-cell">01/01/2021</td>
-										<td class="d-none d-xl-table-cell">31/06/2021</td>
-										<td><span class="badge bg-success">Done</span></td>
-										<td class="d-none d-md-table-cell">William Harris</td>
-									</tr>
-									<tr>
-										<td>Project X</td>
-										<td class="d-none d-xl-table-cell">01/01/2021</td>
-										<td class="d-none d-xl-table-cell">31/06/2021</td>
-										<td><span class="badge bg-success">Done</span></td>
-										<td class="d-none d-md-table-cell">Sharon Lessman</td>
-									</tr>
-									<tr>
-										<td>Project Romeo</td>
-										<td class="d-none d-xl-table-cell">01/01/2021</td>
-										<td class="d-none d-xl-table-cell">31/06/2021</td>
-										<td><span class="badge bg-success">Done</span></td>
-										<td class="d-none d-md-table-cell">Christina Mason</td>
-									</tr>
-									<tr>
-										<td>Project Wombat</td>
-										<td class="d-none d-xl-table-cell">01/01/2021</td>
-										<td class="d-none d-xl-table-cell">31/06/2021</td>
-										<td><span class="badge bg-warning">In progress</span></td>
-										<td class="d-none d-md-table-cell">William Harris</td>
-									</tr>
+
+									{{#each geoLocationData}}
+										{{>geolocation}}
+									{{/each}}
 								</tbody>
 							</table>
 						</div>
