--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -6,7 +6,7 @@
 
 			<ul class="sidebar-nav">
 				<li class="sidebar-header">
-					Pages
+					Features
 				</li>
 
 				<li class="sidebar-item">
@@ -17,25 +17,7 @@
 
 				<li class="sidebar-item">
 					<a class="sidebar-link" href="/users/{{user._id}}">
-						<i class="align-middle" data-feather="user"></i> <span class="align-middle">Profile</span>
-					</a>
-				</li>
-
-				<li class="sidebar-item">
-					<a class="sidebar-link" href="pages-sign-in.html">
-						<i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign In</span>
-					</a>
-				</li>
-
-				<li class="sidebar-item">
-					<a class="sidebar-link" href="pages-sign-up.html">
-						<i class="align-middle" data-feather="user-plus"></i> <span class="align-middle">Sign Up</span>
-					</a>
-				</li>
-
-				<li class="sidebar-item active">
-					<a class="sidebar-link" href="pages-blank.html">
-						<i class="align-middle" data-feather="book"></i> <span class="align-middle">Blank</span>
+						<i class="align-middle" data-feather="user"></i> <span class="align-middle">My Profile</span>
 					</a>
 				</li>
 
@@ -43,37 +25,15 @@
 					Tools & Components
 				</li>
 
+				
+
 				<li class="sidebar-item">
-					<a class="sidebar-link" href="ui-buttons.html">
-						<i class="align-middle" data-feather="square"></i> <span class="align-middle">Buttons</span>
+					<a class="sidebar-link" href="https://github.com/dayofpay/V-Analytics">
+						<i class="align-middle" data-feather="grid"></i> <span class="align-middle">Documentation</span>
 					</a>
 				</li>
 
-				<li class="sidebar-item">
-					<a class="sidebar-link" href="ui-forms.html">
-						<i class="align-middle" data-feather="check-square"></i> <span class="align-middle">Forms</span>
-					</a>
-				</li>
-
-				<li class="sidebar-item">
-					<a class="sidebar-link" href="ui-cards.html">
-						<i class="align-middle" data-feather="grid"></i> <span class="align-middle">Cards</span>
-					</a>
-				</li>
-
-				<li class="sidebar-item">
-					<a class="sidebar-link" href="ui-typography.html">
-						<i class="align-middle" data-feather="align-left"></i> <span
-							class="align-middle">Typography</span>
-					</a>
-				</li>
-
-				<li class="sidebar-item">
-					<a class="sidebar-link" href="icons-feather.html">
-						<i class="align-middle" data-feather="coffee"></i> <span class="align-middle">Icons</span>
-					</a>
-				</li>
-
+				
 				<li class="sidebar-header">
 					Plugins & Addons
 				</li>
@@ -93,12 +53,12 @@
 
 			<div class="sidebar-cta">
 				<div class="sidebar-cta-content">
-					<strong class="d-inline-block mb-2">Upgrade to Pro</strong>
+					<strong class="d-inline-block mb-2">Want to expand the project ?</strong>
 					<div class="mb-3 text-sm">
-						Are you looking for more components? Check out our premium version.
+						Feel free to contribute to the project :)
 					</div>
 					<div class="d-grid">
-						<a href="upgrade-to-pro.html" class="btn btn-primary">Upgrade to Pro</a>
+						<a href="https://github.com/dayofpay/V-Analytics" class="btn btn-primary">Visit Source Page</a>
 					</div>
 				</div>
 			</div>
