--- a/views/partials/topbar.hbs
+++ b/views/partials/topbar.hbs
@@ -56,65 +56,24 @@
 			<div class="dropdown-menu dropdown-menu-lg dropdown-menu-end py-0" aria-labelledby="messagesDropdown">
 				<div class="dropdown-menu-header">
 					<div class="position-relative">
-						4 New Messages
+						1 New Message
 					</div>
 				</div>
 				<div class="list-group">
-					<a href="#" class="list-group-item">
+					<a href="https://github.com/dayofpay/V-Analytics" class="list-group-item">
 						<div class="row g-0 align-items-center">
 							<div class="col-2">
-								<img src="img/avatars/avatar-5.jpg" class="avatar img-fluid rounded-circle"
-									alt="Vanessa Tucker">
+								<img src="https://v-devs.eu/vdevs-data/assets/vdevs-logo.png" class="avatar img-fluid rounded-circle"
+									alt="Vladislav Ivanov">
 							</div>
 							<div class="col-10 ps-2">
-								<div class="text-dark">Vanessa Tucker</div>
-								<div class="text-muted small mt-1">Nam pretium turpis et arcu. Duis arcu
-									tortor.</div>
-								<div class="text-muted small mt-1">15m ago</div>
+								<div class="text-dark">Vladislav Ivanov</div>
+								<div class="text-muted small mt-1">Welcome to V-Analytics. Feel free to ask and contribute in the project page</div>
+								<div class="text-muted small mt-1">30/10/2023 1:25 EET</div>
 							</div>
 						</div>
 					</a>
-					<a href="#" class="list-group-item">
-						<div class="row g-0 align-items-center">
-							<div class="col-2">
-								<img src="img/avatars/avatar-2.jpg" class="avatar img-fluid rounded-circle"
-									alt="William Harris">
-							</div>
-							<div class="col-10 ps-2">
-								<div class="text-dark">William Harris</div>
-								<div class="text-muted small mt-1">Curabitur ligula sapien euismod vitae.
-								</div>
-								<div class="text-muted small mt-1">2h ago</div>
-							</div>
-						</div>
-					</a>
-					<a href="#" class="list-group-item">
-						<div class="row g-0 align-items-center">
-							<div class="col-2">
-								<img src="/img/avatars/avatar-4.jpg" class="avatar img-fluid rounded-circle"
-									alt="Christina Mason">
-							</div>
-							<div class="col-10 ps-2">
-								<div class="text-dark">Christina Mason</div>
-								<div class="text-muted small mt-1">Pellentesque auctor neque nec urna.</div>
-								<div class="text-muted small mt-1">4h ago</div>
-							</div>
-						</div>
-					</a>
-					<a href="#" class="list-group-item">
-						<div class="row g-0 align-items-center">
-							<div class="col-2">
-								<img src="img/avatars/avatar-3.jpg" class="avatar img-fluid rounded-circle"
-									alt="Sharon Lessman">
-							</div>
-							<div class="col-10 ps-2">
-								<div class="text-dark">Sharon Lessman</div>
-								<div class="text-muted small mt-1">Aenean tellus metus, bibendum sed,
-									posuere ac, mattis non.</div>
-								<div class="text-muted small mt-1">5h ago</div>
-							</div>
-						</div>
-					</a>
+					
 				</div>
 				<div class="dropdown-menu-footer">
 					<a href="#" class="text-muted">Show all messages</a>
