--- a/views/index.hbs
+++ b/views/index.hbs
@@ -269,6 +269,29 @@ document.addEventListener('DOMContentLoaded',(event) => {
 							</table>
 						</div>
 					</div>
+
+					<div class="col-12 col-lg-8 col-xxl-9 d-flex">
+						<div class="card flex-fill">
+							<div class="card-header">
+
+								<h5 class="card-title mb-0">Latest Visitors ( Browser List )</h5>
+							</div>
+							<table class="table table-hover my-0">
+								<thead>
+									<tr>
+										<th>BROWSER Data</th>
+
+									</tr>
+								</thead>
+								<tbody>
+
+									{{#each browserList}}
+									{{>browsers}}
+									{{/each}}
+								</tbody>
+							</table>
+						</div>
+					</div>
 					<div class="col-12 col-lg-4 col-xxl-3 d-flex">
 						<div class="card flex-fill w-100">
 							<div class="card-header">
