Some security improvements

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -81,7 +81,7 @@ document.addEventListener('DOMContentLoaded',(event) => {
 											<h1 class="mt-1 mb-3">{{siteData.visitors}}</h1>
 											<div class="mb-0">
 												<span class="text-success"> <i class="mdi mdi-arrow-bottom-right"></i>
-													5.25% </span>
+													0.00% </span>
 												<span class="text-muted">Since last week</span>
 											</div>
 										</div>
@@ -104,7 +104,7 @@ document.addEventListener('DOMContentLoaded',(event) => {
 											<h1 class="mt-1 mb-3">{{siteData.visits}}</h1>
 											<div class="mb-0">
 												<span class="text-success"> <i class="mdi mdi-arrow-bottom-right"></i>
-													5.25% </span>
+													0.00% </span>
 												<span class="text-muted">Since last week</span>
 											</div>
 										</div>
@@ -118,7 +118,7 @@ document.addEventListener('DOMContentLoaded',(event) => {
 						<div class="card flex-fill w-100">
 							<div class="card-header">
 
-								<h5 class="card-title mb-0">Recent Movement</h5>
+								<h5 class="card-title mb-0">Recent Movement ( EXAMPLE )</h5>
 							</div>
 							<div class="card-body py-3">
 								<div class="chart chart-sm">
@@ -168,7 +168,7 @@ document.addEventListener('DOMContentLoaded',(event) => {
 						<div class="card flex-fill w-100">
 							<div class="card-header">
 
-								<h5 class="card-title mb-0">Real-Time</h5>
+								<h5 class="card-title mb-0">Real-Time ( EXAMPLE )</h5>
 							</div>
 							<div class="card-body px-4">
 								<div id="world_map" style="height:350px;"></div>
@@ -254,7 +254,7 @@ document.addEventListener('DOMContentLoaded',(event) => {
 						<div class="card flex-fill w-100">
 							<div class="card-header">
 
-								<h5 class="card-title mb-0">Monthly Sales</h5>
+								<h5 class="card-title mb-0">Monthly Visitors ( Demo )</h5>
 							</div>
 							<div class="card-body d-flex w-100">
 								<div class="align-self-center chart chart-lg">
