--- a/views/index.hbs
+++ b/views/index.hbs
@@ -58,7 +58,7 @@ document.addEventListener('DOMContentLoaded',(event) => {
 
 			<div class="container-fluid p-0">
 
-				<h1 class="h3 mb-3"><strong>Analytics</strong> Dashboard</h1>
+				<h1 class="h3 mb-3"><strong>Analytics</strong> Dashboard - {{siteData.site_name}}</h1>
 
 				<div class="row">
 					<div class="col-xl-6 col-xxl-5 d-flex">
