--- a/views/partials/topbar.hbs
+++ b/views/partials/topbar.hbs
@@ -33,7 +33,7 @@
 
 								<div class="text-muted small mt-1">{{notify.notification_message}}.
 								</div>
-								<div class="text-muted small mt-1">30m ago</div>
+								<div class="text-muted small mt-1">{{notify.notification_timing}}</div>
 							</div>
 						</div>
 					</a>
