--- a/views/partials/topbar.hbs
+++ b/views/partials/topbar.hbs
@@ -89,17 +89,17 @@
 					class="text-dark">{{user.name}}</span>
 			</a>
 			<div class="dropdown-menu dropdown-menu-end">
-				<a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1" data-feather="user"></i>
+				<a class="dropdown-item" href="/users/{{user._id}}"><i class="align-middle me-1" data-feather="user"></i>
 					Profile</a>
-				<a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="pie-chart"></i>
+				<a class="dropdown-item" href="/"><i class="align-middle me-1" data-feather="pie-chart"></i>
 					Analytics</a>
 				<div class="dropdown-divider"></div>
-				<a class="dropdown-item" href="index.html"><i class="align-middle me-1" data-feather="settings"></i>
-					Settings & Privacy</a>
-				<a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="help-circle"></i> Help
+				<a class="dropdown-item" href="/sites/create"><i class="align-middle me-1" data-feather="settings"></i>
+					Add new site</a>
+				<a class="dropdown-item" href="https://github.com/dayofpay/V-Analytics/issues"><i class="align-middle me-1" data-feather="help-circle"></i> Help
 					Center</a>
 				<div class="dropdown-divider"></div>
-				<a class="dropdown-item" href="#">Log out</a>
+				<a class="dropdown-item" href="/auth/logout">Log out</a>
 			</div>
 		</li>
 	</ul>
